Adding in bare-bones structure necessary to display quiz view by button-press

--- a/app_server/static/html/agfk-structure-loader.html
+++ b/app_server/static/html/agfk-structure-loader.html
@@ -4,6 +4,9 @@
 
   <div id="graph-view-wrapper">
   </div>
+    
+  <div id="quiz-view-wrapper">
+  </div>
 
   <div id="concept-editor-wrap">
   </div>
@@ -16,6 +19,7 @@
   {% include "node-title-view.html" %}
   {% include "node-detail-view.html" %}
   {% include "resource-view.html" %}
+  {% include "quiz-view.html" %}
   {% include "dependency-view.html" %}
   {% include "pointers-view.html" %}
   {% include "outlink-view.html" %}
