--- a/app_server/static/html/underscore-templates/concept-list-view.html
+++ b/app_server/static/html/underscore-templates/concept-list-view.html
@@ -7,7 +7,7 @@
 
   <div id="concept-title-header">
     <h1>
-      Learning Plan
+      Learning Plan Hey
     </h1>
     <div class="time-estimate">
       Completion Time: Infinity
@@ -20,6 +20,9 @@
         </button>
         <button class="el-nav-button" id="learn-button">
           <img src="{% static "images/list-icon.png" %}" alt="Graph">
+        </button>
+        <button class="el-nav-button" id="quiz-button">
+          <img src="{% static "images/qmark.png" %}" alt="Quiz">
         </button>
       </div>
       <div>
