Added back in quiz css, fixed quiz answer display

--- a/app_server/static/html/agfk-app.html
+++ b/app_server/static/html/agfk-app.html
@@ -19,6 +19,8 @@
 <link rel="stylesheet" href="{% static "css/concept-details.css" %}"/>
 <link rel="stylesheet" href="{% static "css/explore-graph.css" %}"/>
 <link rel="stylesheet" href="{% static "css/lib/ionicons.css" %}"/>
+<link rel="stylesheet" href="{% static "css/quiz.css" %}" />
+
 {% endblock %}
 
 {% block main %}
