Took out explore button

--- a/app_server/static/html/underscore-templates/concept-list-view.html
+++ b/app_server/static/html/underscore-templates/concept-list-view.html
@@ -15,9 +15,9 @@
 
     <div id="explore-learn-tools">
       <div id="explore-learn-button-wrapper">
-        <button class="el-nav-button" id="explore-button">
+        <!--<button class="el-nav-button" id="explore-button">
           <img src="{% static "images/graph-icon.png" %}" alt="Graph">
-        </button>
+        </button> -->
         <button class="el-nav-button" id="learn-button">
           <img src="{% static "images/list-icon.png" %}" alt="Graph">
         </button>
