Fixed bug with answer shuffling, default to quiz view

--- a/app_server/static/html/underscore-templates/concept-list-view.html
+++ b/app_server/static/html/underscore-templates/concept-list-view.html
@@ -7,7 +7,7 @@
 
   <div id="concept-title-header">
     <h1>
-      Learning Plan Hey
+      Learning Plan
     </h1>
     <div class="time-estimate">
       Completion Time: Infinity
