Added linear view switch, fussed with css a little, added highlighting to linear mode

--- a/app_server/static/html/agfk-structure-loader.html
+++ b/app_server/static/html/agfk-structure-loader.html
@@ -20,6 +20,7 @@
   {% include "node-detail-view.html" %}
   {% include "resource-view.html" %}
   {% include "quiz-view.html" %}
+  {% include "quiz-view-nonlinear.html" %}
   {% include "dependency-view.html" %}
   {% include "pointers-view.html" %}
   {% include "outlink-view.html" %}
