--- a/app_server/static/html/underscore-templates/quiz-view-nonlinear.html
+++ b/app_server/static/html/underscore-templates/quiz-view-nonlinear.html
@@ -1,4 +1,4 @@
-<script type="text/template" id="quiz-view-template">
+<script type="text/template" id="quiz-view-nonlinear-template">
 	
 	<div class="quiz">
 	  <h1 class="title"><strong><% if(concept) { %>
