--- a/app_server/static/html/underscore-templates/quiz-view.html
+++ b/app_server/static/html/underscore-templates/quiz-view.html
@@ -1,6 +1,6 @@
 <script type="text/template" id="quiz-view-template">
 	
-	<div class="quiz">
+	<div class="quiz" id="linear-quiz">
 	  <h1 class="title"><strong><% if(concept) { %>
 				<%= concept %>
     <%} else {%>
