--- a/app_server/static/html/agfk-app.html
+++ b/app_server/static/html/agfk-app.html
@@ -43,6 +43,7 @@
       agfkGlobals.userInitData = {{ user_data|safe }};
       agfkGlobals.auxData = {{ full_graph_skeleton|safe }};
       agfkGlobals.auxModel = null; // init in main js app
+      agfkGlobals.linear = true;
     </script>
   {% if debug %}
   <script data-main="{% static "javascript/main.js" %}" type="text/javascript" src="{% static "javascript/lib/require-min.js" %}"></script>
