--- a/app_server/static/html/underscore-templates/concept-list-view.html
+++ b/app_server/static/html/underscore-templates/concept-list-view.html
@@ -1,11 +1,11 @@
 {% load staticfiles %}
 <script type="text/template" id="concept-list-template">
-
+<% if (linear) { %>
   <div id="concept-list-show-button" class="small-vp-button">
     Concept List
   </div>
-
-  <div id="concept-title-header">
+<!--
+  <div id="concept-title-header" style="display:none">
     <h1>
       Learning Plan
     </h1>
@@ -15,9 +15,10 @@
 
     <div id="explore-learn-tools">
       <div id="explore-learn-button-wrapper">
-        <!--<button class="el-nav-button" id="explore-button">
+        <button class="el-nav-button" id="explore-button">
           <img src="{% static "images/graph-icon.png" %}" alt="Graph">
-        </button> -->
+        </button>
+
         <button class="el-nav-button" id="learn-button">
           <img src="{% static "images/list-icon.png" %}" alt="Graph">
         </button>
@@ -40,9 +41,10 @@
     </div>
   </div>
 
-
+   -->
   <div id="concept-list-wrapper">
       <ol id="concept-list">
       </ol>
   </div>
+<% } %>
 </script>
