--- a/app_server/static/html/underscore-templates/quiz-view.html
+++ b/app_server/static/html/underscore-templates/quiz-view.html
@@ -1,6 +1,6 @@
 <script type="text/template" id="quiz-view-template">
-	
-	<div class="quiz" id="linear-quiz">
+
+	<div class="quiz">
 	  <h1 class="title"><strong><% if(concept) { %>
 				<%= concept %>
     <%} else {%>
@@ -14,7 +14,7 @@
 		<br />
 	  <div>
     	<form class="answer">
-				<% if(t == 0) { %>
+				<% if(t === 0) { %>
 				  <% for (var answer in a) { %>
 
 				  <label class ='answer-choice'><input type='radio' name='answer'  value='<%= a[answer] %>'><%= a[answer] %></label>
