octal experiment landing page, reduced available pages

--- a/app_server/static/html/octal.html
+++ b/app_server/static/html/octal.html
@@ -13,15 +13,15 @@
     {% endblock %}
 
     {% block meta-description %}
-    <meta name="description" content="Metacademy - a free open source platform for efficient, personalized learning.">
+    <meta name="description" content="OCTAL: the Online Course Tool for Adaptive Learning. Based upon Metacademy.">
     {% endblock %}
 
     {% block social-media-tags %}
     <!-- Twitter Card data -->
-    <meta name="twitter:card" value="Metacademy - a free open source platform for efficient, personalized learning." />
+    <meta name="twitter:card" value="OCTAL: the Online Course Tool for Adaptive Learning." />
     <!-- Open Graph data -->
     <meta property="og:image" content="http://www.metacademy.org/static/images/meta-square.png" />
-    <meta property="og:description" content="Metacademy - a free open source platform for efficient, personalized learning." />
+    <meta property="og:description" content="OCTAL: the Online Course Tool for Adaptive Learning" />
     {% endblock %}
 
     {% endblock %}
