update html title

--- a/app_server/static/html/octal.html
+++ b/app_server/static/html/octal.html
@@ -67,13 +67,13 @@
 
     <script type="text/javascript">
       if(!document.createElement('canvas').getContext){
-      alert("Sorry, Metacademy does not work for your browser" +
+      alert("Sorry, OCTAL does not work for your browser" +
       " (IE < 10 or early mobile browsers). Have you considered Firefox/Chrome/Opera instead?");
                                                                                               }
                                                                                               </script>
     {% endblock %}
 
-    <title> {% block title %}Metacademy{% endblock %}</title>
+    <title> {% block title %}OCTAL{% endblock %}</title>
 
     {% endblock %}
   </head>
@@ -86,7 +86,7 @@
           It looks like you have javascript disabled.
         </p>
         <p>
-          You must have javascript enabled on a modern browser in order to use metacademy.org
+          You must have javascript enabled on a modern browser in order to use OCTAL
         </p>
       </div>
     </noscript>
