expose pid to frontend

--- a/app_server/static/html/agfk-app.html
+++ b/app_server/static/html/agfk-app.html
@@ -44,6 +44,7 @@
       agfkGlobals.auxData = {{ full_graph_skeleton|safe }};
       agfkGlobals.auxModel = null; // init in main js app
       agfkGlobals.linear = {{ user_display }};
+      agfkGlobals.pid = {{ pid }};
     </script>
   {% if 1 %}
   <script data-main="{% static "javascript/main.js" %}" type="text/javascript" src="{% static "javascript/lib/require-min.js" %}"></script>
