--- a/app_server/static/html/underscore-templates/quiz-view.html
+++ b/app_server/static/html/underscore-templates/quiz-view.html
@@ -3,10 +3,10 @@
 	<div class="quiz" id="linear-quiz">
 	<div id="logout">
               <% if(pid != 99999) { %>
-                You are currently logged in as a participant, click <a href="/participants/logout/">here</a> to log out
+                You are currently logged in as a participant, click <a href="/participant/logout/" target="_self">here</a> to log out
               <% } else { %>
                 You are not currently logged in.  If you are a participant in the CS10 study, click
-                <a href="/participants/logout/">here</a> to log in
+                <a href="/participant/logout/" target="_self">here</a> to log in
               <% } %>
 
     </div>
