Added in Check and next question buttons

--- a/app_server/static/html/underscore-templates/quiz-view.html
+++ b/app_server/static/html/underscore-templates/quiz-view.html
@@ -38,7 +38,8 @@
     	<br />
 			<br />
         <% if (t != 1) { %>
-    	<input type="submit" value="Submit" class="submit-button">
+        <div id="check-answer">Check   <span class="lil-icons">✓</span></div>
+    	<div id="next-question-button">Next   <span class="lil-icons">↦</span></div>
         <% } %>
 	  </div>
 	</div>
