Replaced stupid correctness alert

--- a/app_server/static/html/underscore-templates/quiz-view.html
+++ b/app_server/static/html/underscore-templates/quiz-view.html
@@ -38,6 +38,8 @@
     	<br />
 			<br />
         <% if (t != 1) { %>
+        <div id="question-feedback"></div>
+        <br />
         <div id="check-answer">Check   <span class="lil-icons">✓</span></div>
     	<div id="next-question-button">Next   <span class="lil-icons">↦</span></div>
         <% } %>
