--- a/app_server/static/html/underscore-templates/quiz-view.html
+++ b/app_server/static/html/underscore-templates/quiz-view.html
@@ -18,6 +18,7 @@
     <% } %>
 		</strong>
     </h1>
+    <div id="questions-remaining"> 0 out of 3 questions completed </div>
 	  <hr />
 		<br />
 	  <div class="question-content">
