Changed the attempt submission text

--- a/app_server/static/html/underscore-templates/quiz-view.html
+++ b/app_server/static/html/underscore-templates/quiz-view.html
@@ -42,8 +42,8 @@
 			<br />
         <% if (t != 1) { %>
         <div id="question-feedback"></div>
-        <div id="check-answer">Check   <span class="lil-icons">✓</span></div>
-    	<div id="next-question-button">Next   <span class="lil-icons">↦</span></div>
+        <div id="check-answer"><span class="lil-icons">✓</span>Check My Answer</div>
+    	<div id="next-question-button">Go To Next Question<span class="lil-icons">↦</span></div>
         <% } %>
         <br />
         <br />
