simplify app templates

--- a/server/static/html/app.html
+++ b/server/static/html/app.html
@@ -29,7 +29,11 @@
   {% include "concept-presentation.html" %}
 </div>
 
-{% include "agfk-structure-loader.html" %}
+<div id="main-display-view">
+  <div id="quiz-view-wrapper">
+  </div>
+</div>
+{% include "quiz-view.html" %}
 
     <script>
       var el = document.getElementById("nojs-content");
