--- a/server/static/html/app.html
+++ b/server/static/html/app.html
@@ -21,6 +21,8 @@
   <div id="quiz-view-wrapper">
     Loading, please wait.
   </div>
+  <div id="graph-view-wrapper">
+  </div>
 </div>
 {% include "quiz-view.html" %}
 
