Fixed the graph, it should now work fine

--- a/server/static/html/underscore-templates/quiz-view.html
+++ b/server/static/html/underscore-templates/quiz-view.html
@@ -11,8 +11,8 @@
 
     </div>
     <br />
-    <h1 class="title"><strong><% if (concept) { %>
-				<%= concept %>
+    <h1 class="title"><strong><% if (title) { %>
+				<%= title %>
     <%} else {%>
         Placeholder
     <% } %>
