skeleton to support graph input

--- a/server/static/html/octal.html
+++ b/server/static/html/octal.html
@@ -13,14 +13,14 @@
     {% endblock %}
 
     {% block meta-description %}
-    <meta name="description" content="OCTAL: the Online Course Tool for Adaptive Learning. Based upon Metacademy.">
+    <meta name="description" content="OCTAL: the Online Course Tool for Adaptive Learning.">
     {% endblock %}
 
     {% block social-media-tags %}
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="OCTAL: the Online Course Tool for Adaptive Learning." />
     <!-- Open Graph data -->
-    <meta property="og:image" content="http://www.metacademy.org/static/images/meta-square.png" />
+    <meta property="og:image" content="/static/images/octal-logo.png" />
     <meta property="og:description" content="OCTAL: the Online Course Tool for Adaptive Learning" />
     {% endblock %}
 
