--- a/server/static/html/app.html
+++ b/server/static/html/app.html
@@ -36,6 +36,7 @@
       agfkGlobals.auxModel = null; // init in main js app
       agfkGlobals.linear = {{ user_display }};
       agfkGlobals.pid = {{ pid }};
+      agfkGlobals.studyActive = {{ study_active }};
       agfkGlobals.csrftoken = '{{ csrf_token }}';
     </script>
   {% if 1 %}
