--- a/server/static/html/research-landing.html
+++ b/server/static/html/research-landing.html
@@ -54,11 +54,11 @@ window.onload = (function(){
 
     <div>
         I am a participant and my participant ID is:
-        <input type="text" inputmode="numeric" maxlength=5 size=5 name="pID" id="pid" />
+        <input type="text" inputmode="latin" maxlength=32 size=16 name="pID" id="pid" />
     </div>
 
     <p>
-    <a href="{% url 'maps:research:handlepid' gid=gid pid=pid %}">I am not a participant in the CS10 
+    <a href="{% url 'maps:research:handlepid' gid=gid pid=sid %}">I am not a participant in the CS10 
     study.</a>
     </p>
 </div>
