--- a/server/static/html/research-landing.html
+++ b/server/static/html/research-landing.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block extra-css %}
-    <link rel="stylesheet" href="{% static "css/research-landing.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/research.css" %}"/>
 {% endblock %}
 
 {% block header-search %}    
