complete display all graphs implementation, refactor/clean/fix css

--- a/server/static/html/octal.html
+++ b/server/static/html/octal.html
@@ -20,7 +20,7 @@
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="OCTAL: the Online Course Tool for Adaptive Learning." />
     <!-- Open Graph data -->
-    <meta property="og:image" content="/static/images/octal-logo.png" />
+    <meta property="og:image" content="{% static "images/octal-logo.png" %}" />
     <meta property="og:description" content="OCTAL: the Online Course Tool for Adaptive Learning" />
     {% endblock %}
 
