prevent private maps from showing on full list; show descriptions on list

--- a/server/static/html/maps-all.html
+++ b/server/static/html/maps-all.html
@@ -19,7 +19,12 @@ more</a>!</p>
 
 <ul class="logo">
 {% for map in maps %}
-    <li><a href="{% url 'maps:display' gid=map.pk %}">{{ map.name }}</a></li>
+    <li>
+        <a href="{% url 'maps:display' gid=map.pk %}">{{ map.name }}</a>
+        {% if map.description %}
+            &mdash; {{ map.description }}
+        {% endif %}    
+    </li>
 {% endfor %}
 </ul>
 
