--- a/server/static/html/underscore-templates/quiz-view.html
+++ b/server/static/html/underscore-templates/quiz-view.html
@@ -2,12 +2,14 @@
 
 	<div class="quiz" <% if (linear == 1)  { %> id="linear-quiz" <% } %> >
 	<div id="logout">
-              <% if(pid != 99999) { %>
-                You are currently logged in as a participant, click <a href="/participant/logout/" target="_self">here</a> to log out
-              <% } else if(agfkGlobals.study_active == 1){ %>
-                If you are a participant in the CS10 study, click
-                <a href="/participant/logout/" target="_self">here</a> to log in
-              <% } %>
+              <% if(studyActive == 1) {
+                    if(pid != 99999) { %>
+                    You are currently logged in as a participant, click <a href="/participant/logout/" target="_self">here</a> to log out
+                  <% } else { %>
+                    If you are a participant in the CS10 study, click
+                    <a href="/participant/logout/" target="_self">here</a> to log in
+                  <% }
+                 }%>
 
     </div>
     <br />
