--- a/server/static/html/underscore-templates/quiz-view.html
+++ b/server/static/html/underscore-templates/quiz-view.html
@@ -4,10 +4,10 @@
 	<div id="logout">
               <% if(studyActive == 1) {
                     if(pid != 99999) { %>
-                    You are currently logged in as a participant, click <a href="/participant/logout/" target="_self">here</a> to log out
+                    You are currently logged in as a participant, click <a href="/maps/<%= gid %>/research/logout/" target="_self">here</a> to log out
                   <% } else { %>
                     If you are a participant in the CS10 study, click
-                    <a href="/participant/logout/" target="_self">here</a> to log in
+                    <a href="/maps/<%= gid %>/research/logout/" target="_self">here</a> to log in
                   <% }
                  }%>
 
