--- a/server/static/html/maps-new.html
+++ b/server/static/html/maps-new.html
@@ -1,6 +1,8 @@
 {% extends "octal.html" %}
 {% load staticfiles %}
 
+{% block title %}: create new map{% endblock %}
+
 {% block jscript-extend %}
 <script type="text/javascript">
 // <![CDATA[
