--- a/server/static/html/octal.html
+++ b/server/static/html/octal.html
@@ -70,7 +70,7 @@
                                                                                               </script>
     {% endblock %}
 
-    <title>{% block title %}OCTAL{% endblock %}</title>
+    <title>OCTAL{% block title %}{% endblock %}</title>
 
     {% endblock %}
   </head>
