--- a/server/static/html/research-landing.html
+++ b/server/static/html/research-landing.html
@@ -1,6 +1,7 @@
 {% extends "octal.html" %}
 {% load staticfiles %}
 
+{% block title %}: research study welcome{% endblock %}
 {% block extra-css %}
     <link rel="stylesheet" href="{% static "css/research.css" %}"/>
 {% endblock %}
