make study template more generalized

--- a/server/static/html/map.html
+++ b/server/static/html/map.html
@@ -35,7 +35,7 @@
       agfkGlobals.auxData = {{ full_graph_skeleton|safe }};
       agfkGlobals.auxModel = null; // init in main js app
       agfkGlobals.linear = {{ user_display }};
-      agfkGlobals.pid = {{ pid }};
+      agfkGlobals.participant = {{ participant }};
       agfkGlobals.studyActive = {{ study_active }};
       agfkGlobals.csrftoken = '{{ csrf_token }}';
     </script>
