--- a/server/static/html/underscore-templates/quiz-view.html
+++ b/server/static/html/underscore-templates/quiz-view.html
@@ -2,14 +2,15 @@
 
 	<div class="quiz" <% if (linear == 1)  { %> id="linear-quiz" <% } %> >
 	<div id="logout">
-              <% if(studyActive == 1) {
-                    if(pid != 99999) { %>
-                    You are currently logged in as a participant, click <a href="/maps/<%= gid %>/research/logout/" target="_self">here</a> to log out
-                  <% } else { %>
-                    If you are a participant in the CS10 study, click
-                    <a href="/maps/<%= gid %>/research/logout/" target="_self">here</a> to log in
-                  <% }
-                 }%>
+        <% if(studyActive == 1) {
+            if(participant) { %>
+                You are currently logged in as a participant, click 
+                <a href="/maps/<%= gid %>/research/logout/" target="_self">here</a> to log out
+            <% } else { %>
+                If you are a participant in the study, click
+                <a href="/maps/<%= gid %>/research/logout/" target="_self">here</a> to log in
+            <% }
+        } %>
 
     </div>
     <br />
