--- a/server/static/html/map.html
+++ b/server/static/html/map.html
@@ -30,14 +30,13 @@
 
   {% block jscript %}
     <script>
-      window.agfkGlobals = {};
-      //agfkGlobals.userInitData = {{ user_data|safe }};
-      agfkGlobals.auxData = {{ full_graph_skeleton|safe }};
-      agfkGlobals.auxModel = null; // init in main js app
-      agfkGlobals.linear = {{ user_display }};
-      agfkGlobals.participant = {{ participant }};
-      agfkGlobals.studyActive = {{ study_active }};
-      agfkGlobals.csrftoken = '{{ csrf_token }}';
+      window.oGlobals = {};
+      oGlobals.auxData = {{ full_graph_skeleton|safe }};
+      oGlobals.auxModel = null; // init in main js app
+      oGlobals.linear = {{ user_display }};
+      oGlobals.participant = {{ participant }};
+      oGlobals.studyActive = {{ study_active }};
+      oGlobals.csrftoken = '{{ csrf_token }}';
     </script>
   {% if 1 %}
   <script data-main="{% static "javascript/main.js" %}" type="text/javascript" src="{% static "javascript/lib/require-min.js" %}"></script>
