make graph save and JS variable names more consistent

--- a/server/static/html/map.html
+++ b/server/static/html/map.html
@@ -33,7 +33,7 @@
       window.oGlobals = {};
       oGlobals.auxData = {{ full_graph_skeleton|safe }};
       oGlobals.auxModel = null; // init in main js app
-      oGlobals.linear = {{ user_display }};
+      oGlobals.linear = {{ linear }};
       oGlobals.participant = {{ participant }};
       oGlobals.studyActive = {{ study_active }};
       oGlobals.csrftoken = '{{ csrf_token }}';
