post edit form to correct url

--- a/server/static/html/maps-form.html
+++ b/server/static/html/maps-form.html
@@ -43,12 +43,10 @@ window.onload = (function(){
 <h1>OCTAL</h1>
 
 <h2>{% if not gid %}Create a new{% else %}Edit a{% endif %} concept map</h2>
-
 <p>Please fill out the below information to 
 {% if not gid %}create a new{% else %}edit a {% endif %}map.</p>
 
 {% if not forms.graph %}
-
     <form action="{% url 'maps:edit' gid=gid %}" method="post">
     {% csrf_token %}
     <div class="secret">
@@ -59,10 +57,12 @@ window.onload = (function(){
 
     <input type="submit" value="Go" />
     </form>
-
 {% else %}
-
-    <form action="{% url 'maps:new' %}" method="post">
+    {% if gid %}
+        <form action="{% url 'maps:edit' gid=gid %}" method="post">
+    {% else %}
+        <form action="{% url 'maps:new' %}" method="post">
+    {% endif %}        
     {% csrf_token %}
     <table>
         {{ forms.graph.as_table }}
@@ -81,11 +81,11 @@ window.onload = (function(){
     <br />
     <span>{{ forms.graph.secret.value }}</span>
     </p>
-    {% endif %}
 
     <p class="error" style="display:none;text-align:center" id="warn">Be sure
     you have recorded the above secret, or you will be
     unable to edit your map!</p>
+    {% endif %}
 
     <input type="submit" value="{% if gid %}Save{% else %}Create{% endif %}" />
     </form>
